--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
+  padding-top:20% ;
   text-align: center;
+  border: 1px solid black;
+  height: 60vh;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.chatResponse .userRespone{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  background-color: rgba(165, 160, 160, 0.113);
+  color: rgb(100, 59, 59);
 }
 
-.App-link {
-  color: #61dafb;
+.commentSec{
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  height: 7vh;
+  padding: 2%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.txtField{
+  /*background-color: grey;
+  color: white;*/
+  min-width: 300px;
+  margin-right: 1%;
 }
